Fix labels not showing up in the 'Change Password' preference page
Found by @aungzwin10.

--- a/UI/css/ledgersmb-common.css
+++ b/UI/css/ledgersmb-common.css
@@ -527,3 +527,9 @@ span.indicator {
     left: 207px;
     right: 207px;
 }
+
+#pwcontainer label {
+    display: block;
+    float: left;
+    width: 16ex;
+}
